# PythonCVLab1

./: .gitignore  README.md  profile_pipeline.py  pyproject.toml  run_lab.py  train_cli_output.txt
artifacts/history/: resnet18_pretrain_history.json  resnet18_scratch_history.json  resnet50_pretrain_history.json
artifacts/metadata/: dataset_summary.json
artifacts/reports/: resnet18_pretrain_metrics.json  resnet18_scratch_metrics.json  resnet50_pretrain_metrics.json
src/car_color_lab/: __init__.py  constants.py  data_index.py  datasets.py  evaluate.py  io_utils.py  plots.py  train.py  types.py
src/car_color_lab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/car_color_lab/models/: __init__.py  factory.py  resnet18_scratch.py
